# cropdusters

./: LICENSE  README.md  api_key.txt  dbt_project.yml  dev.duckdb  mkdocs.yml  profiles.yml  pyproject.toml  requirements.txt
cropdusters/: dev.duckdb.wal  example.ipynb  extract.py  load.py
cropdusters_PR2-main/: README.md  dbt_project.yml  mkdocs.yml  pyproject.toml
cropdusters_PR2-main/cropdusters/: example_command.ipynb  extract.py  load.py  weather_data.json
cropdusters_PR2-main/docs/: extract.md  index.md
cropdusters_PR2-main/models/: schema.yml
cropdusters_PR2-main/models/Chooser/: crop_chooser_model.sql
cropdusters_PR2-main/models/Price/: crop_price_model.sql
cropdusters_PR2-main/models/yield/: crop_yield_model.sql
cropdusters_PR2-main/tests/: test_extract.py  test_load.py
cropdusters_PR2-main/tests/features/crop_chooser/: crop_chooser.feature  crop_chooser.py
docs/: extract.md  index.md
models/: schema.yml
models/Chooser/: crop_chooser_model.sql
models/Price/: crop_price_model.sql
models/yield/: crop_yield_model.sql
tests/: test_extract.py  test_load.py
tests/features/crop_yield_prediction/: crop_yield_prediction.py  yield_prediction.feature
